<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".GameActivity">


    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|top">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:layout_column="0">

            <Button
                android:layout_width="127dp"
                android:layout_height="138dp"
                android:text="@string/emptyhole"
                android:id="@+id/button7"
                android:layout_row="1"
                android:layout_column="0"
                android:background="@drawable/crack_default" />

            <Button
                android:layout_width="127dp"
                android:layout_height="138dp"
                android:text="@string/emptyhole"
                android:id="@+id/button8"
                android:layout_row="1"
                android:layout_column="2"
                android:background="@drawable/crack_default"/>

            <Button
                android:layout_width="127dp"
                android:layout_height="138dp"
                android:text="@string/emptyhole"
                android:id="@+id/button9"
                android:layout_row="1"
                android:layout_column="3"
                android:background="@drawable/crack_default"/>

            <Button
                android:layout_width="127dp"
                android:layout_height="138dp"
                android:text="@string/emptyhole"
                android:id="@+id/button4"
                android:layout_row="2"
                android:layout_column="0"
                android:background="@drawable/crack_default"/>

            <Button
                android:layout_width="127dp"
                android:layout_height="138dp"
                android:text="@string/emptyhole"
                android:id="@+id/button5"
                android:layout_row="2"
                android:layout_column="2"
                android:background="@drawable/crack_default"/>

            <Button
                android:layout_width="127dp"
                android:layout_height="138dp"
                android:text="@string/emptyhole"
                android:id="@+id/button6"
                android:layout_row="2"
                android:layout_column="3"
                android:background="@drawable/crack_default"/>

            <Button
                android:layout_width="127dp"
                android:layout_height="138dp"
                android:text="@string/emptyhole"
                android:id="@+id/button1"
                android:layout_row="3"
                android:layout_column="0"
                android:background="@drawable/crack_default"/>

            <Button
                android:layout_width="127dp"
                android:layout_height="138dp"
                android:text="@string/emptyhole"
                android:id="@+id/button2"
                android:layout_row="3"
                android:layout_column="2"
                android:background="@drawable/crack_default"/>

            <Button
                android:layout_width="127dp"
                android:layout_height="138dp"
                android:text="@string/emptyhole"
                android:id="@+id/button3"
                android:layout_row="3"
                android:layout_column="3"
                android:background="@drawable/crack_default"/>
        </GridLayout>

    </GridLayout>

    <FrameLayout
        android:layout_width="382dp"
        android:layout_height="100dp"
        android:layout_gravity="left|bottom">

        <TextView
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/scoreTitle"
            android:id="@+id/textView"
            android:layout_gravity="left|top"
            android:textColor="#ffffff"
            android:gravity="center"/>

        <TextView
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/scorePoints"
            android:id="@+id/scoretext"
            android:layout_gravity="left|center_vertical"
            android:textColor="#ffffff"
            android:gravity="center"/>

        <TextView
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/timerTitle"
            android:id="@+id/textView3"
            android:textColor="#ffffff"
            android:layout_gravity="center_horizontal|top"
            android:gravity="center"/>

        <TextView
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/timerTime"
            android:id="@+id/timertext"
            android:gravity="center"
            android:textColor="#ffffff"
            android:layout_gravity="center" />

        <ImageButton
            android:layout_width="101dp"
            android:layout_height="88dp"
            android:id="@+id/imageButton"
            android:background="@drawable/pause"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="30dp"/>

    </FrameLayout>


</FrameLayout>
